style.css
/* --------------------- */
/*   CUSTOM PROPERTIES   */
/* --------------------- */

:root {
  --clr-green-100: 90, 100%, 88%;
  --clr-green-200: 84, 29%, 90%;
  --clr-green-300: 90, 37%, 85%;
  --clr-green-400: 120, 35%, 21%;
  --clr-green-500: 120, 31%, 13%;
  --accent-clr: 120, 35%, 21%;
  --white-clr: 0, 0%, 100%;

  --font-size-100: 0.9375rem;
  --font-size-200: 1.0625rem;
  --font-size-300: 1.125rem;
  --font-size-400: 1.1875rem;
  --font-size-450: 1.5rem;
  --font-size-500: 1.8125rem;
  --font-size-600: 3rem;
  --font-size-700: 4rem;

  --font-sans-normal: "Inter", sans-serif;
}

@media (min-width: 45em) {
  :root {
    --font-size-600: 3.5rem;
    --font-size-700: 6.25rem;
  }
}

/* --------------------- */
/*    UTILITY CLASSES    */
/* --------------------- */

/* Layout */

.flex {
  display: flex;
  gap: var(--gap, 2rem);
}

.grid {
  display: grid;
  gap: var(--gap, 2rem);
}

.container {
  padding-inline: 2em;
  margin-inline: auto;
  max-width: var(--width, 1108px);
}

.screen-reader-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap; /* added line */
  border: 0;
}

.even-columns {
  place-items: center;
}

@media (min-width: 45em) {
  .even-columns {
    grid-template-columns: 1fr 1fr;
  }
}

/* Colors */
.bg-clr-200 {
  background-color: hsl(var(--clr-green-200));
}
.bg-clr-300 {
  background-color: hsl(var(--clr-green-300));
}
.bg-clr-400 {
  background-color: hsl(var(--clr-green-400));
}
.bg-clr-500 {
  background-color: hsl(var(--clr-green-500));
}
.bg-clr-light {
  background-color: hsl(var(--white-clr));
}

.text-clr-100 {
  color: hsl(var(--clr-green-100));
}
.text-clr-400 {
  color: hsl(var(--clr-green-400));
}

/* Typography */

.font-size-100 {
  font-size: var(--font-size-100);
}
.font-size-200 {
  font-size: var(--font-size-200);
}
.font-size-300 {
  font-size: var(--font-size-300);
}
.font-size-400 {
  font-size: var(--font-size-400);
}
.font-size-500 {
  font-size: var(--font-size-500);
}
.font-size-600 {
  font-size: var(--font-size-600);
}
.font-size-700 {
  font-size: var(--font-size-700);
}

.line-height-100 {
  line-height: 28px;
}
.line-height-200 {
  line-height: 46px;
}
.line-height-250 {
  line-height: 56px;
}
.line-height-300 {
  line-height: 75px;
}

@media (min-width: 45em) {
  .line-height-300 {
    line-height: 100px;
  }
}

/* --------------------- */
/*       COMPONENTS      */
/* --------------------- */

/* btns */

.btn {
  display: inline-block;
  text-decoration: none;
  border-radius: 9999px;
}

.btn-normal {
  padding: 1.125em 2.25em;
  font-weight: 600;
  text-transform: uppercase;
  position: relative;
  z-index: 1;
  overflow-x: hidden;
  transition: color 1.5s ease-out;
}

.btn-normal::after {
  content: "";
  position: absolute;
  top: 0;
  left: -100%;
  width: 100%;
  height: 95%;
  background-color: hsl(var(--clr-green-300));
  border-radius: inherit;
  z-index: -1;
  opacity: 0;
  transition: transform 0.3s ease-out, opacity 0.3s ease-out;
}

.btn-normal:hover::after,
.btn-normal:focus::after {
  transform: translateX(100%);
  opacity: 1;
}

.btn-normal:hover,
.btn-normal:focus {
  color: hsl(var(--clr-green-400));
}

.btn-normal:active {
  background-color: hsl(var(--clr-green-300));
  transform: translateY(3px);
}

.btn-small {
  padding: 0.4375em 1.0625em;
  border: 1px solid hsl(var(--clr-green-400));
}

.btn-small:hover,
.btn-small:focus {
  background-color: hsl(var(--clr-green-300));
}

.download-btn:hover,
.download-btn:focus {
  background-color: hsl(var(--clr-green-300));
}

.dot-indicators > * {
  cursor: pointer;
  border: 0;
  border-radius: 50%;
  width: 0.875rem;
  aspect-ratio: 1;
  background-color: hsl(var(--clr-green-400));
  border: 1px solid hsl(var(--clr-green-400));
}

.dot-indicators > [aria-selected="false"] {
  background-color: hsl(var(--clr-green-300));
}

.primary-main__img-info {
  --gap: 0.5rem;
  place-items: center;
  position: absolute;
  top: var(--top, 1rem);
  bottom: var(--bottom);
  left: var(--left, 1rem);
  width: fit-content;
  padding: 0.6875em 1.0625em;
  background-color: hsl(var(--white-clr));
  border-radius: 9999px;
}

/* --------------------- */
/*   GENERAL SELECTORS   */
/* --------------------- */

body {
  font-family: var(--font-sans-normal);
  color: hsl(var(--clr-green-400));
  background-color: hsl(var(--clr-green-200));
  overflow-x: hidden;
}

body > *:not(:first-child) {
  margin-top: 5rem;
}

a {
  text-decoration: none;
}

/* --------------------- */
/*    CLASS SELECTORS    */
/* --------------------- */

/* header */

.primary-header {
  --width: 1512px;
  place-items: center;
  justify-content: space-between;
  padding: 22px 16px;
}

.hero-section > div > *:not(:first-child) {
  margin-top: 50px;
}

/* main section */

.primary-main > *:not(:first-child) {
  margin-top: 5rem;
}

@media (min-width: 45em) {
  .primary-main {
    --gap: 7rem;
  }
}

.primary-main__img-container {
  position: relative;
}

/* main images and overlay texts */

.primary-main section:nth-child(2) img:nth-child(2) {
  border-radius: 50%;
}

.primary-main section:nth-child(2) .primary-main__img-info {
  --left: -1rem;
}

.primary-main section:nth-child(3) img:nth-child(2) {
  border-top-right-radius: 50%;
  border-bottom-right-radius: 50%;
}

.primary-main section:nth-child(3) .primary-main__img-info {
  --top: none;
  --bottom: 1rem;
}

.primary-main section:nth-child(4) img:nth-child(2) {
  border-radius: 6.5rem;
}

.primary-main section:nth-child(4) .primary-main__img-info {
  --top: 2rem;
  --left: -2rem;
}

.primary-main__text-section span {
  margin-bottom: 0.625rem;
}
.primary-main__text-section h2 {
  margin-bottom: 1.5rem;
}
.primary-main__text-section p {
  margin-bottom: 2.625rem;
}

/* reviews section */

.reviews-section {
  --width: 1500px;
  position: relative;
}

.reviews-section h2 {
  text-align: center;
  margin-bottom: 3.3125rem;
}

.reviews-section__stores {
  --gap: 0.7rem;
  justify-content: center;
  flex-wrap: wrap;
  margin-bottom: 5rem;
}

.reviews-section__stores > div {
  --gap: 0.5rem;
  justify-content: center;
  padding: 0.75rem 1.5625rem;
  border-radius: 9999px;
}

.reviews-section__stores span:last-child {
  font-weight: bold;
}

.reviews-container {
  --gap: 1rem;
  overflow: hidden;
}

/* review */

.review {
  padding: 1.6875rem 1.5rem;
  border-radius: 1.25rem;
  max-width: 80%;
  flex-shrink: 0;
  position: relative;
}

.review > :nth-child(1) {
  margin-bottom: 1.125rem;
}

.review > :nth-child(2) {
  margin-bottom: 5.125rem;
}

@media (min-width: 45em) {
  .review {
    max-width: 600px;
  }
}

.reviewer {
  --gap: 0.5rem;
}

.review-btns {
  width: fit-content;
  margin: 0 auto;
  margin-top: 2rem;
}

/* decorative forms */

.decorative-forms-section h2 {
  text-align: center;
  margin-bottom: 2rem;
}

.decorative-forms {
  color: hsl(var(--white-clr));
  --gap: 0.5rem;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: 220px;
  grid-auto-flow: dense;
}

@media (min-width: 750px) {
  .decorative-forms {
    grid-template-columns: repeat(4, minmax(160px, 1fr));
  }
}

.decorative-forms div {
  background-color: hsl(var(--accent-clr));
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  background-blend-mode: overlay;
  display: flex;
  padding: 1rem;
}

.decorative-forms div:before {
  /* Keeps the forms aspect ratio */
  content: "";
  display: block;
  height: 0;
  width: 0;
  padding-bottom: calc(9 / 16 * 100%);
}

/* decorative forms images */

.decorative-forms div:nth-child(1) {
  background-image: url(img/cactus_succulents.webp.png);
  place-items: top;
  border-radius: 0px 0px 250px 0px;
}
.decorative-forms div:nth-child(2) {
  background-image: url(img/vegetables.webp.png);
  place-items: center;
  border-radius: 19.4375rem;
}
.decorative-forms div:nth-child(3) {
  background-image: url(img/herbs.webp.png);
  border-radius: 40px 40px 40px 0px;
}
.decorative-forms div:nth-child(4) {
  background-image: url(img/orchids.webp.png);
  grid-row: span 2;
  place-items: center;
  border-radius: 0px 0px 200px 0px;
}
.decorative-forms div:nth-child(5) {
  background-image: url(img/foliage_plants.webp.png);
  grid-column: span 2;
  border-radius: 0px 200px;
  place-items: top;
}
.decorative-forms div:nth-child(6) {
  background-image: url(img/flowering_plants.webp.png);
  border-radius: 40px 0px 40px 40px;
}

/* footer */

footer {
  padding: 2rem 0;
}

footer a {
  color: hsl(var(--clr-green-100), 0.5);
}

.footer__navigation-section {
  flex-direction: column;
  justify-content: space-between;
  margin-bottom: 13.5rem;
}

@media (min-width: 45em) {
  .footer__navigation-section {
    flex-direction: row;
  }
}

.footer__navigation-section img {
  width: 106px;
}

.footer__navigation-section nav {
  --gap: 7rem;
  justify-content: space-between;
}

.footer__navigation-section nav h2 {
  font-size: var(--font-size-200);
  margin-bottom: 1rem;
}

footer ul > *:not(:first-child) {
  margin-top: 1rem;
}

.footer__navigation-section nav li {
  font-size: var(--font-size-200);
  color: hsl(var(--clr-green-100), 0.5);
}

.footer__navigation-section ~ div {
  justify-content: space-between;
  align-items: center;
}

.footer__download-links {
  --gap: 1rem;
  place-items: center;
  flex-direction: column;
}

@media (min-width: 45em) {
  .footer__download-links {
    flex-direction: row;
  }
}

.footer__download-links > div img {
  width: 36px;
  height: 36px;
}

.footer__download-links a img {
  width: 126px;
}

.footer__credits {
  font-size: var(--font-size-100);
}

.footer__credits > *:not(:first-child) {
  margin-top: 0.5rem;
}

/* --------------- */
/*    Animations   */
/* --------------- */

.from-left {
  transform: translateX(-50%);
}

.from-right {
  transform: translateX(50%);
}

.from-left,
.from-right {
  transition: opacity 400ms ease-in, transform 800ms ease-out;
  opacity: 0;
}

.from-left.appear,
.from-right.appear {
  transform: translateX(0); /* moves elements back */
  opacity: 1;
}

